# lofty-pm

./: .gitignore  README.md  SKILL.md  pyproject.toml
config/: property_update_map.json  property_update_map.template.json
references/: api.md  updates-schema.md
scripts/: add_channel_mapping.py  backfill_lofty_updates_history.py  build_lofty_pm_payloads.py  capture_lofty_auth_via_cdp.py  extract_lofty_lease_begins_dates.py  extract_lofty_pm_request_from_har.py  extract_lofty_property_data.py  extract_property_details_to_md.py  generic_pm_matcher.py  ingest_and_publish_lofty_update.py  ingest_atlas_relay_update.py  lofty_cdp.py  lofty_pm_paths.py  lofty_webpack_enumerate.py  publish_latest_update_to_lofty.py  push_property_data_to_lofty.py  read_write_description_md.py  rebuild_property_update_map.py  save_and_send_lofty_pm_update.py  update_lofty_pm_lease_begins_dates.py  update_lofty_pm_property.py  write_property_update_md.py
src/lofty_pm_mcp/: __init__.py  server.py  service.py
